--- a/detail_rekonsiliasi1_100_b.html
+++ b/detail_rekonsiliasi1_100_b.html
@@ -111,7 +111,7 @@
               aria-haspopup="true"
               aria-expanded="false"
             >
-              <p>Officer Pemkab</p>
+              <p>Officer Pemkot Makassar</p>
             </a>
             <div class="dropdown-menu dropdown-menu-right pt-0">
               <a class="dropdown-item" href="index.html">
@@ -136,7 +136,7 @@
                 <div class="card-header">
                   <div class="row">
                     <div class="col-md-12">
-                          <label for=""><strong>Rekonsiliasi Iuran JKM Periode Juni 2021</strong></label>
+                          <label for=""><strong>Rekonsiliasi Iuran JKK Periode Mei 2021</strong></label>
                     </div>
                   </div>
                 </div>
@@ -158,70 +158,17 @@
                 </div>
                 <div class="card-body">
                   <div class="row">
-                    <div class="col-sm-12">
-                      <label for="">Induk</label>
-                      <div class="row">
-                        <div class="col-sm-6">
-                          <ul class="list-group">
-                            <li class="list-group-item list-group-item-success">Rp 700.000.000</li>
-                          </ul>
-                        </div>
-                        <div class="col-sm-6">
-                          <ul class="list-group">
-                            <li class="list-group-item list-group-item-success">Rp 700.000.000</li>
-                          </ul>
-                        </div>
-                      </div>
-                      <br />
-                      <label for="">Susulan</label>
-                      <div class="row">
-                        <div class="col-sm-6">
-                          <ul class="list-group">
-                            <li class="list-group-item list-group-item-success">Rp 200.000.000</li>
-                          </ul>
-                        </div>
-                        <div class="col-sm-6">
-                          <ul class="list-group">
-                            <li class="list-group-item list-group-item-success">Rp 200.000.000</li>
-                          </ul>
-                        </div>
-                      </div>
-                      <br />
-                      <label for="">Rapel</label>
-                      <div class="row">
-                        <div class="col-sm-6">
-                          <ul class="list-group">
-                            <li class="list-group-item list-group-item-success">Rp 200.000.000</li>
-                          </ul>
-                        </div>
-                        <div class="col-sm-6">
-                          <ul class="list-group">
-                            <li class="list-group-item list-group-item-success">Rp 200.000.000</li>
-                          </ul>
-                        </div>
-                      </div>
-                      <br />
-                      <label for="">Total</label>
-                      <div class="row">
-                        <div class="col-sm-6">
-                          <ul class="list-group">
-                            <li class="list-group-item list-group-item-success">Rp 1.100.000.000</li>
-                          </ul>
-                        </div>
-                        <div class="col-sm-6">
-                          <ul class="list-group">
-                            <li class="list-group-item list-group-item-success">Rp 1.100.000.000</li>
-                          </ul>
-                        </div>
-                      </div>
-                    </div>
+                    <div class="col-sm-12"><br><div class="row"><div class="col-sm-6"><ul class="list-group"><li class="list-group-item list-group-item-success d-flex justify-content-between align-items-center">Peserta<span>10.566</span></li><li class="list-group-item list-group-item-success">= Rp 94.614.420</li></ul></div><div class="col-sm-6"><ul class="list-group"><li class="list-group-item list-group-item-success d-flex justify-content-between align-items-center">Peserta<span>10.566</span></li><li class="list-group-item list-group-item-success">= Rp 94.614.420</li></ul></div></div><hr></div>
+                    <div class="col-sm-12"><h5 class="card-title">PMK</h5><div class="row"><div class="col-sm-6"><hr></div></div></div>
+                    <div class="col-sm-12"><br><div class="row"><div class="col-sm-6"><ul class="list-group"><li class="list-group-item d-flex justify-content-between align-items-center">Peserta<span>6</span></li><li class="list-group-item d-flex justify-content-between align-items-center">Nominal<span>Rp 67.584</span></li></ul></div></div><hr style="border-top:2px solid"></div>
+                    <div class="col-sm-12"><div class="row"><div class="col-sm-6"><ul class="list-group"><li class="list-group-item d-flex justify-content-between align-items-center">Selisih<span>Rp 0</span></li></div></div></div>
                   </div>
                 </div>
                 <div class="card-footer">
                   <div class="row justify-content-sm-end">
                     <div class="col-sm-6">
                       <div class="progress">
-                        <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">100%</div>
+                        <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">0%</div>
                       </div>
                     </div>
                     <div class="col-sm-6">
