--- a/detail_rekonsiliasi_100.html
+++ b/detail_rekonsiliasi_100.html
@@ -141,7 +141,7 @@
                 <div class="card-header">
                   <div class="row">
                     <div class="col-md-12">
-                          <label for=""><strong>Rekonsiliasi Iuran JKM Periode Juni 2021</strong></label>
+                          <label for=""><strong>Rekonsiliasi Iuran IWP Periode Juni 2021</strong></label>
                     </div>
                   </div>
                 </div>
@@ -154,7 +154,7 @@
                         </div>
                         <div class="col-md-6">
                           <label for="" id="nama-pemkab1"
-                            >Pemkab B</label
+                            >Pemkot Makassar</label
                           >
                         </div>
                       </div>
@@ -163,63 +163,10 @@
                 </div>
                 <div class="card-body">
                   <div class="row">
-                    <div class="col-sm-12">
-                      <label for="">Induk</label>
-                      <div class="row">
-                        <div class="col-sm-6">
-                          <ul class="list-group">
-                            <li class="list-group-item list-group-item-success">Rp 700.000.000</li>
-                          </ul>
-                        </div>
-                        <div class="col-sm-6">
-                          <ul class="list-group">
-                            <li class="list-group-item list-group-item-success">Rp 700.000.000</li>
-                          </ul>
-                        </div>
-                      </div>
-                      <br />
-                      <label for="">Susulan</label>
-                      <div class="row">
-                        <div class="col-sm-6">
-                          <ul class="list-group">
-                            <li class="list-group-item list-group-item-success">Rp 200.000.000</li>
-                          </ul>
-                        </div>
-                        <div class="col-sm-6">
-                          <ul class="list-group">
-                            <li class="list-group-item list-group-item-success">Rp 200.000.000</li>
-                          </ul>
-                        </div>
-                      </div>
-                      <br />
-                      <label for="">Rapel</label>
-                      <div class="row">
-                        <div class="col-sm-6">
-                          <ul class="list-group">
-                            <li class="list-group-item list-group-item-success">Rp 200.000.000</li>
-                          </ul>
-                        </div>
-                        <div class="col-sm-6">
-                          <ul class="list-group">
-                            <li class="list-group-item list-group-item-success">Rp 200.000.000</li>
-                          </ul>
-                        </div>
-                      </div>
-                      <br />
-                      <label for="">Total</label>
-                      <div class="row">
-                        <div class="col-sm-6">
-                          <ul class="list-group">
-                            <li class="list-group-item list-group-item-success">Rp 1.100.000.000</li>
-                          </ul>
-                        </div>
-                        <div class="col-sm-6">
-                          <ul class="list-group">
-                            <li class="list-group-item list-group-item-success">Rp 1.100.000.000</li>
-                          </ul>
-                        </div>
-                      </div>
-                    </div>
+                    <div class="col-sm-12"><br><div class="row"><div class="col-sm-6"><ul class="list-group"><li class="list-group-item list-group-item-success d-flex justify-content-between align-items-center">Peserta<span>10.522</span></li><li class="list-group-item list-group-item-success">= Rp 3.398.258.010</li></ul></div><div class="col-sm-6"><ul class="list-group"><li class="list-group-item list-group-item-success d-flex justify-content-between align-items-center">Peserta<span>10.522</span></li><li class="list-group-item list-group-item-success">= Rp 3.398.258.010</li></ul></div></div><hr></div>
+                    <div class="col-sm-12"><h5 class="card-title">PMK</h5><div class="row"><div class="col-sm-6"><hr></div></div></div>
+                    <div class="col-sm-12"><br><div class="row"><div class="col-sm-6"><ul class="list-group"><li class="list-group-item d-flex justify-content-between align-items-center">Peserta<span>4</span></li><li class="list-group-item d-flex justify-content-between align-items-center">Nominal<span>Rp 1.635.676</span></li></ul></div></div><hr style="border-top:2px solid"></div>
+                    <div class="col-sm-12"><div class="row"><div class="col-sm-6"><ul class="list-group"><li class="list-group-item d-flex justify-content-between align-items-center">Selisih<span>Rp 0</span></li></div></div></div>
                   </div>
                 </div>
                 <div class="card-footer">
