--- a/rekonsiliasi.html
+++ b/rekonsiliasi.html
@@ -156,8 +156,8 @@
                     <tbody>
                       <tr>
                         <td>JKK</td>
-                        <td>Pemkab A</td>
-                        <td>Juni 2021</td>
+                        <td>Pemprov Sulsel</td>
+                        <td>Mei 2021</td>
                         <td>
                           <span class="badge badge-warning"
                             >Menunggu approval Pemkab</span
@@ -183,8 +183,8 @@
                         </td>
                       </tr>
                       <tr>
-                        <td>JKM</td>
-                        <td>Pemkab B</td>
+                        <td>IWP</td>
+                        <td>Pemkot Makassar</td>
                         <td>Juni 2021</td>
                         <td>
                           <span class="badge badge-success">Selesai</span>
@@ -210,9 +210,9 @@
                         </td>
                       </tr>
                       <tr>
-                        <td>JKK-DPR</td>
-                        <td>Pemkab A</td>
-                        <td>Juni 2021</td>
+                        <td>JKK</td>
+                        <td>Pemkot Makassar</td>
+                        <td>Mei 2021</td>
                         <td>
                           <span class="badge badge-warning"
                             >Menunggu approval Manager Taspen</span
@@ -238,9 +238,9 @@
                         </td>
                       </tr>
                       <tr>
-                        <td>JKK</td>
-                        <td>Pemkab A</td>
-                        <td>Mei 2021</td>
+                        <td>IWP</td>
+                        <td>Pemkot Pare-Pare</td>
+                        <td>Juni 2021</td>
                         <td>
                           <span class="badge badge-warning"
                             >Menunggu approval Kacab</span
@@ -266,9 +266,9 @@
                         </td>
                       </tr>
                       <tr>
-                        <td>JKM-DPR</td>
-                        <td>Pemkab A</td>
-                        <td>Juni 2021</td>
+                        <td>JKM</td>
+                        <td>Pemkab Maros</td>
+                        <td>Mei 2021</td>
                         <td>
                           <span class="badge badge-danger">Ditolak</span>
                         </td>
