--- a/rekonsiliasi1.html
+++ b/rekonsiliasi1.html
@@ -111,7 +111,7 @@
               aria-haspopup="true"
               aria-expanded="false"
             >
-              <p>Officer Pemkab</p>
+              <p>Officer Pemkot Makassar</p>
             </a>
             <div class="dropdown-menu dropdown-menu-right pt-0">
               <a class="dropdown-item" href="index.html">
@@ -148,7 +148,7 @@
                     </thead>
                     <tbody>
                       <tr>
-                        <td>JKK</td>
+                        <td>IWP</td>
                         <td>Juni 2021</td>
                         <td>
                           <span class="badge badge-success">Selesai</span>
@@ -173,10 +173,10 @@
                         </td>
                       </tr>
                       <tr>
-                        <td>JKM</td>
-                        <td>Juni 2021</td>
+                        <td>JKK</td>
+                        <td>Mei 2021</td>
                         <td>
-                          <span class="badge badge-success">Selesai</span>
+                          <span class="badge badge-warning">Menunggu approval Taspen</span>
                         </td>
                         <td>
                           <button
@@ -188,88 +188,10 @@
                             Lihat
                           </button>
                           <button
-                            class="btn btn-sm btn-success"
+                            class="btn btn-sm btn-secondary"
                             type="reset"
                             style="margin-right: 2px"
                             id="cetakcetak1"
-                          >
-                            Cetak Berita Acara
-                          </button>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>JKK-DPR</td>
-                        <td>Juni 2021</td>
-                        <td>
-                          <span class="badge badge-warning"
-                            >Menunggu approval Taspen</span
-                          >
-                        </td>
-                        <td>
-                          <button
-                            class="btn btn-sm btn-primary"
-                            type="reset"
-                            style="margin-right: 2px"
-                            onclick="location.href='detail_rekonsiliasi1_75.html'"
-                          >
-                            Lihat
-                          </button>
-                          <button
-                            class="btn btn-sm btn-secondary"
-                            type="reset"
-                            style="margin-right: 2px"
-                            disabled
-                          >
-                            Cetak Berita Acara
-                          </button>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>IWP</td>
-                        <td>Mei 2021</td>
-                        <td>
-                          <span class="badge badge-warning"
-                            >Menunggu approval Kepala</span
-                          >
-                        </td>
-                        <td>
-                          <button
-                            class="btn btn-sm btn-primary"
-                            type="reset"
-                            style="margin-right: 2px"
-                            onclick="location.href='detail_rekonsiliasi1_50.html'"
-                          >
-                            Lihat
-                          </button>
-                          <button
-                            class="btn btn-sm btn-secondary"
-                            type="reset"
-                            style="margin-right: 2px"
-                            disabled
-                          >
-                            Cetak Berita Acara
-                          </button>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>JKM-DPR</td>
-                        <td>Juni 2021</td>
-                        <td>
-                          <span class="badge badge-danger">Ditolak</span>
-                        </td>
-                        <td>
-                          <button
-                            class="btn btn-sm btn-primary"
-                            type="reset"
-                            style="margin-right: 2px"
-                            onclick="location.href='detail_rekonsiliasi1_50_f.html'"
-                          >
-                            Lihat
-                          </button>
-                          <button
-                            class="btn btn-sm btn-secondary"
-                            type="reset"
-                            style="margin-right: 2px"
                             disabled
                           >
                             Cetak Berita Acara
