--- a/setoran.html
+++ b/setoran.html
@@ -116,7 +116,7 @@
               aria-haspopup="true"
               aria-expanded="false"
             >
-              <p>Officer Pemkab</p>
+              <p>Officer Taspen</p>
             </a>
             <div class="dropdown-menu dropdown-menu-right pt-0">
               <a class="dropdown-item" href="index.html">
@@ -158,11 +158,47 @@
                     <tbody>
                       <tr>
                         <td>JKK</td>
-                        <td>Pemkab 1</td>
+                        <td>Pemkot Makassar</td>
                         <td>Induk</td>
                         <td>4 Juni 2021</td>
-                        <td>Rp 500.000.000</td>
-                        <td>54321</td>
+                        <td>94.205.941</td>
+                        <td>-</td>
+                        <td>10.522</td>
+                        <td>
+                          <button
+                            class="btn btn-sm btn-primary"
+                            type="reset"
+                            style="margin-right: 2px"
+                          >
+                            Lihat
+                          </button>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>IWP</td>
+                        <td>Pemkot Makassar</td>
+                        <td>Induk</td>
+                        <td>4 Juni 2021</td>
+                        <td>3.398.258.010</td>
+                        <td>EB5D53CIEO9N9M4P</td>
+                        <td>10.522</td>
+                        <td>
+                          <button
+                            class="btn btn-sm btn-primary"
+                            type="reset"
+                            style="margin-right: 2px"
+                          >
+                            Lihat
+                          </button>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>JKM-DPR</td>
+                        <td>Pemprov Sulsel</td>
+                        <td>Induk</td>
+                        <td>4 Juni 2021</td>
+                        <td>500.000.000</td>
+                        <td>-</td>
                         <td>300</td>
                         <td>
                           <button
@@ -176,47 +212,11 @@
                       </tr>
                       <tr>
                         <td>JKK</td>
-                        <td>Pemkab 1</td>
-                        <td>Induk</td>
-                        <td>4 Juni 2021</td>
-                        <td>Rp 200.000.000</td>
-                        <td>54322</td>
-                        <td>100</td>
-                        <td>
-                          <button
-                            class="btn btn-sm btn-primary"
-                            type="reset"
-                            style="margin-right: 2px"
-                          >
-                            Lihat
-                          </button>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>JKK-DPR</td>
-                        <td>Pemkab 1</td>
-                        <td>Induk</td>
-                        <td>4 Juni 2021</td>
-                        <td>Rp 500.000.000</td>
-                        <td>54324</td>
-                        <td>300</td>
-                        <td>
-                          <button
-                            class="btn btn-sm btn-primary"
-                            type="reset"
-                            style="margin-right: 2px"
-                          >
-                            Lihat
-                          </button>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>JKK</td>
-                        <td>Pemkab 1</td>
+                        <td>Pemkab Maros</td>
                         <td>Susulan</td>
                         <td>4 Juni 2021</td>
-                        <td>Rp 50.000.000</td>
-                        <td>54325</td>
+                        <td>50.000.000</td>
+                        <td>-</td>
                         <td>300</td>
                         <td>
                           <button
@@ -230,11 +230,11 @@
                       </tr>
                       <tr>
                         <td>JKK</td>
-                        <td>Pemkab 1</td>
+                        <td>Pemkab Pare-Pare</td>
                         <td>Rapel</td>
                         <td>4 Juni 2021</td>
-                        <td>Rp 500.000.000</td>
-                        <td>54326</td>
+                        <td>500.000.000</td>
+                        <td>-</td>
                         <td>300</td>
                         <td>
                           <button
