--- a/upload.html
+++ b/upload.html
@@ -111,7 +111,7 @@
               aria-haspopup="true"
               aria-expanded="false"
             >
-              <p>Officer Pemkab</p>
+              <p>Officer Pemkot Makassar</p>
             </a>
             <div class="dropdown-menu dropdown-menu-right pt-0">
               <a class="dropdown-item" href="index.html">
@@ -144,8 +144,8 @@
                         <div class="col-md-9 col-form-label">
                           <select class="form-control" id="ccprogram">
                             <option value="0">Pilih program</option>
-                            <option value="1">JKK-JKM</option>
-                            <option value="2">JKK-JKM-DPR</option>
+                            <option value="1">JKK</option>
+                            <option value="2">JKM</option>
                             <option value="3">IWP</option>
                           </select>
                         </div>
