--- a/setoran1.html
+++ b/setoran1.html
@@ -111,7 +111,7 @@
               aria-haspopup="true"
               aria-expanded="false"
             >
-              <p>Officer Pemkab</p>
+              <p>Officer Pemkot Makassar</p>
             </a>
             <div class="dropdown-menu dropdown-menu-right pt-0">
               <a class="dropdown-item" href="index.html">
@@ -154,9 +154,9 @@
                         <td>JKK</td>
                         <td>Induk</td>
                         <td>4 Juni 2021</td>
-                        <td>Rp 500.000.000</td>
-                        <td>54321</td>
-                        <td>300</td>
+                        <td>94.205.941</td>
+                        <td>-</td>
+                        <td>10.522</td>
                         <td>
                           <button
                             class="btn btn-sm btn-primary"
@@ -168,12 +168,12 @@
                         </td>
                       </tr>
                       <tr>
-                        <td>JKK</td>
+                        <td>JKM</td>
                         <td>Induk</td>
                         <td>4 Juni 2021</td>
-                        <td>Rp 200.000.000</td>
-                        <td>54322</td>
-                        <td>100</td>
+                        <td>282.617.823</td>
+                        <td>-</td>
+                        <td>10.522</td>
                         <td>
                           <button
                             class="btn btn-sm btn-primary"
@@ -185,12 +185,12 @@
                         </td>
                       </tr>
                       <tr>
-                        <td>JKK-DPR</td>
+                        <td>IWP</td>
                         <td>Induk</td>
                         <td>4 Juni 2021</td>
-                        <td>Rp 500.000.000</td>
-                        <td>54324</td>
-                        <td>300</td>
+                        <td>3.398.258.010</td>
+                        <td>EB5D53CIEO9N9M4P</td>
+                        <td>10.522</td>
                         <td>
                           <button
                             class="btn btn-sm btn-primary"
@@ -204,10 +204,10 @@
                       <tr>
                         <td>JKK</td>
                         <td>Susulan</td>
-                        <td>4 Juni 2021</td>
-                        <td>Rp 50.000.000</td>
-                        <td>54325</td>
-                        <td>300</td>
+                        <td>4 Mei 2021</td>
+                        <td>94.614.420</td>
+                        <td>-</td>
+                        <td>10.566</td>
                         <td>
                           <button
                             class="btn btn-sm btn-primary"
@@ -219,12 +219,12 @@
                         </td>
                       </tr>
                       <tr>
-                        <td>JKK</td>
+                        <td>JKM</td>
                         <td>Rapel</td>
-                        <td>4 Juni 2021</td>
-                        <td>Rp 500.000.000</td>
-                        <td>54326</td>
-                        <td>300</td>
+                        <td>4 Mei 2021</td>
+                        <td>283.843.260</td>
+                        <td>-</td>
+                        <td>10.566</td>
                         <td>
                           <button
                             class="btn btn-sm btn-primary"
